# god

./: Dockerfile  LICENSE.md  PROBLEM_STATEMENT.md  README.md  SKILLS.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
data/: run_history.json
src/god_sim/: __init__.py  cli.py  config.py
src/god_sim/analytics/: __init__.py  history.py  metrics.py
src/god_sim/app/: __init__.py  streamlit_app.py
src/god_sim/domain/: __init__.py  person.py  resources.py  soul.py  world.py
src/god_sim/engine/: __init__.py  optimizer.py  sim.py
src/god_sim/insights/: __init__.py  download.py  llm.py
